Allow SoftwareUpdates to be disabled with the config file

--- a/README
+++ b/README
@@ -62,3 +62,19 @@ mkdir build
 cd build
 cmake ..
 make
+
+
+Configuration
+------------------------
+To change the appearance details (beside the widget style, fonts, icon theme and color scheme
+selected via the systemsettings), you can use the commandline option -stylesheet filename.css
+to provide a Qt CSS widget stylesheet. For some examples see the included stylesheet.css file.
+For details about the syntax and possible options see http://doc.qt.io/qt-5/stylesheet.html
+
+To explicitely disable the Software-Updater (packagekit based), set the ~/.config/liquidshellrc
+config file entry:
+
+[SoftwareUpdates]
+enabled=false
+
+The config file and a default entry (enabled=true) will be created at first run of liquidshell
