change my email address

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Author: Martin Koller, kollix@aon.at
+Author: Martin Koller, martin@kollix.at
 First release: Oktober 2017
 
 liquidshell is a basic Desktop Shell implemented using QtWidgets.
